# ilqgames_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: three_player_vicon_params.yaml  two_player_boeing_params.yaml  two_player_vicon_params.yaml
exec/: three_player_planner_node.cpp  two_player_planner_node.cpp
include/ilqgames_ros/: receding_horizon_planner.h  three_player_vicon_demo.h  two_player_boeing_demo.h  two_player_vicon_demo.h
ros/src/ilqgames_msgs/: CMakeLists.txt  package.xml
ros/src/ilqgames_msgs/msg/: State.msg  ThreePlayerRacingControl.msg  ThreePlayerRacingInput.msg
ros/src/ilqgames_msgs/srv/: Polyline.srv
ros/src/ilqgames_ros/: CMakeLists.txt  package.xml
ros/src/ilqgames_ros/config/: three_player_racing_params.yaml  three_player_vicon_params.yaml  two_player_vicon_params.yaml
ros/src/ilqgames_ros/exec/: RacingInput.cpp  SixDCarSim.cpp  three_player_racing_demo.cpp  two_player_boeing_node.cpp  two_player_vicon_demo.cpp
ros/src/ilqgames_ros/include/ilqgames_ros/: RacingInput.h  SixDCarSim.h  receding_horizon_planner.h  three_player_racing_demo.h  three_player_vicon_demo.h  two_player_vicon_demo.h
ros/src/ilqgames_ros/launch/: boeing_demo.launch  three_player_racing_demo.launch
ros/src/ilqgames_ros/src/: RacingInput.cpp  SixDCarSim.cpp  racing_lane_center.cpp  racing_sim_setup.py  receding_horizon_planner.cpp  three_player_racing_demo.cpp  three_player_vicon_demo.cpp  two_player_vicon_demo.cpp
src/: receding_horizon_planner.cpp  three_player_vicon_demo.cpp  two_player_boeing_demo.cpp  two_player_vicon_demo.cpp
